--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/all.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/whatsapp-fab.css">
     <link rel="stylesheet" href="css/text-parallax.css">
 </head>
 
@@ -128,7 +129,7 @@
                             <img src="img/food_item/food_item_1.png" alt="">
                         </div>
                         <div class="single_blog_text">
-                            <h3>Indian Burger</h3>
+                            <h3>Misal Farsana</h3>
                             <p>Was brean shed moveth day yielding tree yielding day were female and </p>
                             <a href="#" class="btn_3">Read More <img src="img/icon/left_2.svg" alt=""></a>
                         </div>
@@ -140,7 +141,7 @@
                             <img src="img/food_item/food_item_2.png" alt="">
                         </div>
                         <div class="single_blog_text">
-                            <h3>Cremy Noodles</h3>
+                            <h3>Mix Farsana</h3>
                             <p>Was brean shed moveth day yielding tree yielding day were female and </p>
                             <a href="#" class="btn_3">Read More <img src="img/icon/left_2.svg" alt=""></a>
                         </div>
@@ -152,7 +153,7 @@
                             <img src="img/food_item/food_item_3.png" alt="">
                         </div>
                         <div class="single_blog_text">
-                            <h3>Honey bread</h3>
+                            <h3>Navratna Farsana</h3>
                             <p>Was brean shed moveth day yielding tree yielding day were female and </p>
                             <a href="#" class="btn_3">Read More <img src="img/icon/left_2.svg" alt=""></a>
                         </div>
@@ -164,7 +165,7 @@
                             <img src="img/food_item/food_item_1.png" alt="">
                         </div>
                         <div class="single_blog_text">
-                            <h3>Cremy Noodles</h3>
+                            <h3>Navratna Farsana</h3>
                             <p>Was brean shed moveth day yielding tree yielding day were female and </p>
                             <a href="#" class="btn_3">Read More <img src="img/icon/left_2.svg" alt=""></a>
                         </div>
@@ -255,7 +256,7 @@
                                     <div class="single_food_item media">
                                         <img src="img/food_menu/single_food_1.png" class="mr-3" alt="...">
                                         <div class="media-body align-self-center">
-                                            <h3>Pork Sandwich</h3>
+                                            <h3>Bhel Farsana</h3>
                                             <p>They're wherein heaven seed hath nothing</p>
                                             <h5>$40.00</h5>
                                         </div>
@@ -338,7 +339,7 @@
                                     <div class="single_food_item media">
                                         <img src="img/food_menu/single_food_1.png" class="mr-3" alt="...">
                                         <div class="media-body align-self-center">
-                                            <h3>Pork Sandwich</h3>
+                                            <h3>Bhel Farsana</h3>
                                             <p>They're wherein heaven seed hath nothing</p>
                                             <h5>$40.00</h5>
                                         </div>
@@ -369,7 +370,7 @@
                                     <div class="single_food_item media">
                                         <img src="img/food_menu/single_food_1.png" class="mr-3" alt="...">
                                         <div class="media-body align-self-center">
-                                            <h3>Pork Sandwich</h3>
+                                            <h3>Bhel Farsana</h3>
                                             <p>They're wherein heaven seed hath nothing</p>
                                             <h5>$40.00</h5>
                                         </div>
@@ -453,7 +454,7 @@
                                     <div class="single_food_item media">
                                         <img src="img/food_menu/single_food_1.png" class="mr-3" alt="...">
                                         <div class="media-body align-self-center">
-                                            <h3>Pork Sandwich</h3>
+                                            <h3>Bhel Farsana</h3>
                                             <p>They're wherein heaven seed hath nothing</p>
                                             <h5>$40.00</h5>
                                         </div>
@@ -485,7 +486,7 @@
                                     <div class="single_food_item media">
                                         <img src="img/food_menu/single_food_1.png" class="mr-3" alt="...">
                                         <div class="media-body align-self-center">
-                                            <h3>Pork Sandwich</h3>
+                                            <h3>Bhel Farsana</h3>
                                             <p>They're wherein heaven seed hath nothing</p>
                                             <h5>$40.00</h5>
                                         </div>
@@ -549,7 +550,7 @@
                 <div class="col-xl-5">
                     <div class="section_tittle">
                         <p>Team Member</p>
-                        <h2>Our Experience Chefs</h2>
+                        <h2>Our Experience Founders</h2>
                     </div>
                 </div>
             </div>
@@ -996,6 +997,12 @@
     <script src="js/jquery.nice-select.min.js"></script>
     <!-- custom js -->
     <script src="js/custom.js"></script>
+<!-- WhatsApp Floating Button -->
+<div class="whatsapp-fab">
+    <a href="https://wa.me/919011873168?text=Hi%20Jaybhawani%20Team.%20Need%20to%20discuss%20about%20farsana" target="_blank" rel="noopener noreferrer" aria-label="Chat on WhatsApp">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
+    </a>
+</div>
 </body>
 
 </html>
